Setup first working version

--- a/.env
+++ b/.env
@@ -23,5 +23,12 @@ APP_SECRET=
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+# MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MESSENGER_TRANSPORT_DSN=sync://
 ###< symfony/messenger ###
+
+WEBHOOK_SECRET=aeRiphait3pheiquoo5eenootuepe2ais5hi7ISh6aDieyauy5
+
+###> symfony/pushover-notifier ###
+# PUSHOVER_DSN=pushover://USER_KEY:APP_TOKEN@default
+###< symfony/pushover-notifier ###
