--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.2.*",
+        "symfony/notifier": "7.2.*",
+        "symfony/pushover-notifier": "7.2.*",
         "symfony/runtime": "7.2.*",
         "symfony/webhook": "7.2.*",
         "symfony/yaml": "7.2.*"
